# browser-sync-cli

./: README.md  build.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
