[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperaide-browser-sync"
version = "1.0.0"
description = "HyperAide Browser Auth Sync CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HyperAide", email = "support@hyperaide.com"}
]
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
hyperaide-sync = "main:app"

[tool.setuptools]
py-modules = ["main"]
